# pogoda

./: .gitignore  FsClimateClassifier.sln  FsPogodaCli.sln  README.md  requirements.txt  test_api.py
legacy/: README.md  _inspect_power.py  debug_arid.py  environment.yml  pyproject.toml
legacy/cache/: m23.6984_p133.8813_2020.json  p15.5636_p32.5349_2020.json  p19.5938_m155.4284_2018.json  p19.5938_m155.4284_2019.json  p19.5938_m155.4284_2020.json  p19.5938_m155.4284_2021.json  p19.5938_m155.4284_2022.json  p21.3045_m157.8557_2018.json  p21.3045_m157.8557_2019.json  p21.3045_m157.8557_2020.json  p21.3045_m157.8557_2021.json  p21.3045_m157.8557_2022.json  p23.3333_p45.3333_2020.json  p25.0743_p55.1885_1990.json  p25.0743_p55.1885_1991.json  p25.0743_p55.1885_1992.json  p25.0743_p55.1885_1993.json  p25.0743_p55.1885_1994.json  p25.0743_p55.1885_1995.json  p25.0743_p55.1885_1996.json  p25.0743_p55.1885_1997.json  p25.0743_p55.1885_1998.json  p25.0743_p55.1885_1999.json  p25.0743_p55.1885_2000.json  p25.0743_p55.1885_2018.json  p25.0743_p55.1885_2019.json  p25.0743_p55.1885_2020.json  p25.0743_p55.1885_2021.json  p25.0743_p55.1885_2022.json  p30.0444_p31.2357_1990.json  p30.0444_p31.2357_1991.json  p30.0444_p31.2357_1992.json  p30.0444_p31.2357_1993.json  p30.0444_p31.2357_1994.json  p30.0444_p31.2357_1995.json  p30.0444_p31.2357_1996.json  p30.0444_p31.2357_1997.json  p30.0444_p31.2357_1998.json  p30.0444_p31.2357_1999.json  p30.0444_p31.2357_2000.json  (+106 more)
legacy/pogoda/: __init__.py  __main__.py  aggregate.py  cache.py  cli.py  geocode.py  koppen.py  power.py  trewartha.py  (+1 more)
(+84 files in other folders)
