[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pogoda"
version = "0.1.0"
description = "Köppen climate classifier using NASA POWER data"
authors = [ { name = "Your Name" } ]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["climate", "koppen", "nasa power", "classification"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.7.0",
  "geopy>=2.4.1",
  "tqdm>=4.66.0"
]

[project.scripts]
pogoda = "pogoda.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pogoda*"]
